[tool.poetry]
name = "test-project-scripts"
version = "0.1.0"
description = "Scripts used in the TEST research project"
authors = ["Mario E. Bermonti-Pérez <mbermonti1132@gmail.com>"]
license = "BSD-3 Clause"

[tool.poetry.dependencies]
python = ">=3.6.1,<3.10"
wdiff = "^0.0.7"
stimpool = "^0.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
